--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>My First Repository</h1>
-
+<p>I have learned from this module how to save your project in Git Hub.</p>
     
 </body>
 </html>
